--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 </div>
 
                 <div id="solitaire-scorebar-move" class="flex-div">
-                    <span class="title">Moves</span>
+                    <span class="title">Count</span>
                     <span class="item" id="solitaire-move">24</span>
                 </div>
             </div>
